--- a/index.html
+++ b/index.html
@@ -313,10 +313,10 @@
                     <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="#services">Services</a>
+                    <a href="#services">Skills</a>
                 </li>
                 <li>
-                    <a href="#cases">Cases</a>
+                    <a href="#cases">Works</a>
                 </li>
                
                 <li>
