--- a/index.html
+++ b/index.html
@@ -235,24 +235,28 @@
 <div class="menu_open">
     <div class="header_tab">
         <a href="/" class="header_logo">
-            <svg x="0px" y="0px" viewBox="0 0 19 17">
-                <rect width="1" height="17"/>
-                <rect x="2" width="1" height="17"/>
-                <rect x="4" width="1" height="17"/>
-                <rect x="6" y="0" width="1" height="3"/>
-                <rect x="8" y="0" width="1" height="3"/>
-                <rect x="10" y="0" width="1" height="3"/>
-                <rect x="12" y="0" width="1" height="3"/>
-                <rect x="6" y="14" width="1" height="3"/>
-                <rect x="8" y="11" width="1" height="6"/>
-                <rect x="10" y="11" width="1" height="6"/>
-                <rect x="8" y="6" width="1" height="2"/>
-                <rect x="10" y="6" width="1" height="2"/>
-                <rect x="12" y="6" width="1" height="11"/>
-                <rect x="14" width="1" height="17"/>
-                <rect x="16" width="1" height="17"/>
-                <rect x="18" width="1" height="17"/>
-            </svg>
+            <svg x="0px" y="0px" viewBox="0 0 19 17" >
+    
+   
+            <rect id="Rectangle-path" x="0" y="0" width="1" height="17"></rect>
+            <rect id="Rectangle-path" x="2" y="0" width="1" height="17"></rect>
+            <rect id="Rectangle-path" x="4" y="0" width="1" height="17"></rect>
+            <rect id="Rectangle-path" x="6" y="0" width="1" height="3"></rect>
+            <rect id="Rectangle-path" x="8" y="0" width="1" height="3"></rect>
+            <rect id="Rectangle-path" x="10" y="0" width="1" height="3"></rect>
+            <rect id="Rectangle-path-Copy-5" x="12" y="11" width="1" height="3"></rect>
+            <rect id="Rectangle-path-Copy-6" x="12" y="14" width="1" height="3"></rect>
+            <rect id="Rectangle-path" x="12" y="0" width="1" height="3"></rect>
+            <rect id="Rectangle-path" x="6" y="14" width="1" height="3"></rect>
+            <rect id="Rectangle-path" x="8" y="11" width="1" height="6"></rect>
+            <rect id="Rectangle-path" x="10" y="11" width="1" height="6"></rect>
+            <rect id="Rectangle-path" x="8" y="6" width="1" height="2"></rect>
+            <rect id="Rectangle-path" x="10" y="6" width="1" height="2"></rect>
+            <rect id="Rectangle-path-Copy" x="9" y="6" width="1" height="2"></rect>
+            <rect id="Rectangle-path" x="14" y="0" width="1" height="17"></rect>
+            <rect id="Rectangle-path" x="16" y="0" width="1" height="17"></rect>
+            <rect id="Rectangle-path" x="18" y="0" width="1" height="17"></rect>
+</svg>
         </a>
         <div class="email">
             <a href="mailto:palashtanejapt@gmail.com" class="email_in">
@@ -263,24 +267,28 @@
     </div>
     <div class="header_left">
         <a href="/" class="header_logo">
-            <svg x="0px" y="0px" viewBox="0 0 19 17">
-                <rect width="1" height="17"/>
-                <rect x="2" width="1" height="17"/>
-                <rect x="4" width="1" height="17"/>
-                <rect x="6" y="0" width="1" height="3"/>
-                <rect x="8" y="0" width="1" height="3"/>
-                <rect x="10" y="0" width="1" height="3"/>
-                <rect x="12" y="0" width="1" height="3"/>
-                <rect x="6" y="14" width="1" height="3"/>
-                <rect x="8" y="11" width="1" height="6"/>
-                <rect x="10" y="11" width="1" height="6"/>
-                <rect x="8" y="6" width="1" height="2"/>
-                <rect x="10" y="6" width="1" height="2"/>
-                <rect x="12" y="6" width="1" height="11"/>
-                <rect x="14" width="1" height="17"/>
-                <rect x="16" width="1" height="17"/>
-                <rect x="18" width="1" height="17"/>
-            </svg>
+           <svg x="0px" y="0px" viewBox="0 0 19 17" >
+    
+   
+            <rect id="Rectangle-path" x="0" y="0" width="1" height="17"></rect>
+            <rect id="Rectangle-path" x="2" y="0" width="1" height="17"></rect>
+            <rect id="Rectangle-path" x="4" y="0" width="1" height="17"></rect>
+            <rect id="Rectangle-path" x="6" y="0" width="1" height="3"></rect>
+            <rect id="Rectangle-path" x="8" y="0" width="1" height="3"></rect>
+            <rect id="Rectangle-path" x="10" y="0" width="1" height="3"></rect>
+            <rect id="Rectangle-path-Copy-5" x="12" y="11" width="1" height="3"></rect>
+            <rect id="Rectangle-path-Copy-6" x="12" y="14" width="1" height="3"></rect>
+            <rect id="Rectangle-path" x="12" y="0" width="1" height="3"></rect>
+            <rect id="Rectangle-path" x="6" y="14" width="1" height="3"></rect>
+            <rect id="Rectangle-path" x="8" y="11" width="1" height="6"></rect>
+            <rect id="Rectangle-path" x="10" y="11" width="1" height="6"></rect>
+            <rect id="Rectangle-path" x="8" y="6" width="1" height="2"></rect>
+            <rect id="Rectangle-path" x="10" y="6" width="1" height="2"></rect>
+            <rect id="Rectangle-path-Copy" x="9" y="6" width="1" height="2"></rect>
+            <rect id="Rectangle-path" x="14" y="0" width="1" height="17"></rect>
+            <rect id="Rectangle-path" x="16" y="0" width="1" height="17"></rect>
+            <rect id="Rectangle-path" x="18" y="0" width="1" height="17"></rect>
+</svg>
         </a>
         <div class="header_sound">
             <i class="line"></i>
