added digital art

--- a/index.html
+++ b/index.html
@@ -493,6 +493,27 @@
         <div class="cases_item">
             <div class="section_title">
                 <div class="section_title_text">
+                    Digital Art
+                </div>
+            </div>
+            <div class="cases_content">
+        
+                <div class="cases_info">Made a few illustrations and paintings</div>
+                <a href="static/img/digital-art.png" class="cases_title"><span>Digital Art</span></a>
+                <div class="cases_text">Hobby<br> Design <br> Painting</div>
+                <a href="static/img/digital-art.png" class="cases_more">View more</a>
+                <div class="cases_img">
+                    <div class="cases_line"></div>
+                    <a href="static/img/digital-art.png" class="cases_image">
+                        <img src="static/img/digital-art.png" alt="">
+                        <canvas class="cases_canvas" data-text="03"></canvas>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="cases_item">
+            <div class="section_title">
+                <div class="section_title_text">
                     Dengue Forecast
                 </div>
             </div>
@@ -506,7 +527,7 @@
                     <div class="cases_line"></div>
                     <a href="https://palashtanejapro.github.io/" class="cases_image">
                         <img src="static/img/dengue.jpg" alt="">
-                        <canvas class="cases_canvas" data-text="03"></canvas>
+                        <canvas class="cases_canvas" data-text="04"></canvas>
                     </a>
                 </div>
             </div>
@@ -527,7 +548,7 @@
                     <div class="cases_line"></div>
                     <a href="https://palashtanejapro.github.io/" class="cases_image">
                         <img src="static/img/mailman.jpg" alt="">
-                        <canvas class="cases_canvas" data-text="04"></canvas>
+                        <canvas class="cases_canvas" data-text="05"></canvas>
                     </a>
                 </div>
             </div>
@@ -548,7 +569,7 @@
                     <div class="cases_line"></div>
                     <a href="vortexdpsr.github.io" class="cases_image">
                         <img src="static/img/pi.webp" alt="">
-                        <canvas class="cases_canvas" data-text="05"></canvas>
+                        <canvas class="cases_canvas" data-text="06"></canvas>
                     </a>
                 </div>
             </div>
@@ -569,7 +590,7 @@
                     <div class="cases_line"></div>
                     <a href="#" class="cases_image">
                         <img src="static/img/depression.jpg" alt="">
-                        <canvas class="cases_canvas" data-text="06"></canvas>
+                        <canvas class="cases_canvas" data-text="07"></canvas>
                     </a>
                 </div>
             </div>
