--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.png">
     
   
-   
+	<script src="static/js/alert.js"></script>   
  
 </head>
 
